--- a/symfony/app/config/config.yml
+++ b/symfony/app/config/config.yml
@@ -37,6 +37,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    date:
+        timezone: "America/Tegucigalpa"
 
 # Doctrine Configuration
 doctrine:
