--- a/symfony/src/AppBundle/Resources/config/routing/documentos.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/documentos.yml
@@ -20,3 +20,8 @@ documento_upload_pdf:
     path: /upload-pdf/{id}
     defaults: { _controller: "AppBundle:Documentos:upload", id:null }
     methods: POST
+    
+documento_listaDocumentos:
+    path: /listar-documentos
+    defaults: { _controller: "AppBundle:Documentos:listaDocumentos" }
+    methods: POST
