--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblSecuenciales.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblSecuenciales.orm.yml
@@ -57,6 +57,12 @@ BackendBundle\Entity\TblSecuenciales:
             length: 1
             options:
                 fixed: false
+        actualizada:
+            type: string
+            nullable: true
+            length: 1
+            options:
+                fixed: false
     manyToOne:
         idTipoDocumento:
             targetEntity: TblTipoDocumento
