--- a/symfony/src/AppBundle/Resources/config/routing/mantenimientos.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/mantenimientos.yml
@@ -13,3 +13,9 @@ default_cambioFecha:
     path: /cambio-fecha
     defaults: { _controller: "AppBundle:MantCambioFechas:cambioFecha" }
     methods: POST
+    
+# Ruta para la Consulta de la Comunicacion
+default_buscaComunicacion:
+    path: /busca-comunicacion
+    defaults: { _controller: "AppBundle:MantCambioFechas:buscaComunicacion" }
+    methods: POST
