--- a/symfony/app/config/config.yml
+++ b/symfony/app/config/config.yml
@@ -44,6 +44,7 @@ twig:
 doctrine:
      #Postgresql
     dbal:
+        #charset: utf8mb4
         driver: "%database_driver%"
         host: "%database_host%"
         port: "%database_port%"
@@ -62,7 +63,8 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
-
+    
+ 
 # Swiftmailer Configuration
 swiftmailer:    
     transport: %mailer_transport%
