--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblSecuenciales.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblSecuenciales.orm.yml
@@ -2,16 +2,23 @@ BackendBundle\Entity\TblSecuenciales:
     type: entity
     table: tbl_secuenciales
     indexes:
+        fki_id_depto_funcional_secuencias:
+            columns:
+                - id_depto_funcional
         idx_cod_secuencia:
             columns:
                 - cod_secuencial
         fki_secuncia_doc:
             columns:
                 - id_tipo_documento
+        fki_tipo_user_secuencias:
+            columns:
+                - id_tipo_usuario
     uniqueConstraints:
-        Unique_cod_tipo_doc:
+        FK_uni_secuencia:
             columns:
                 - cod_secuencial
+                - id_depto_funcional
                 - id_tipo_documento
     id:
         idSecuencial:
@@ -73,5 +80,25 @@ BackendBundle\Entity\TblSecuenciales:
             joinColumns:
                 id_tipo_documento:
                     referencedColumnName: id_tipo_documento
+            orphanRemoval: false
+        idTipoUsuario:
+            targetEntity: TblTipoUsuario
+            cascade: {  }
+            fetch: LAZY
+            mappedBy: null
+            inversedBy: null
+            joinColumns:
+                id_tipo_usuario:
+                    referencedColumnName: id_tipo_usuario
+            orphanRemoval: false
+        idDeptoFuncional:
+            targetEntity: TblDepartamentosFuncionales
+            cascade: {  }
+            fetch: LAZY
+            mappedBy: null
+            inversedBy: null
+            joinColumns:
+                id_depto_funcional:
+                    referencedColumnName: id_depto_funcional
             orphanRemoval: false
     lifecycleCallbacks: {  }
