--- a/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
@@ -122,6 +122,12 @@ listascomunes_funcionariosList:
     path: /funcionarios-list
     defaults: { _controller: "AppBundle:ListasComunes:funcionariosList"}
     methods: POST
+    
+# Listado de Funcionarios | 18-01-2018
+listascomunes_funcionariosDirectorList:
+    path: /funcionarios-list-director
+    defaults: { _controller: "AppBundle:ListasComunes:funcionariosDirectorList"}
+    methods: POST
 
 # Listado de Funcionarios po Depto Funcional | 15-09-2017
 listascomunes_funcionariosAsignadosList:
