--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblDepartamentosFuncionales.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblDepartamentosFuncionales.orm.yml
@@ -2,12 +2,12 @@ BackendBundle\Entity\TblDepartamentosFuncionales:
     type: entity
     table: tbl_departamentos_funcionales
     indexes:
-        tbl_departamentos_funcionales_cod_depto_funcional_idx:
-            columns:
-                - cod_depto_funcional
         fki_deptos_direcciones:
             columns:
                 - id_direccion_sreci
+        tbl_departamentos_funcionales_cod_depto_funcional_idx:
+            columns:
+                - cod_depto_funcional
     uniqueConstraints:
         tbl_departamentos_funcionales_cod_depto_funcional_key:
             columns:
@@ -51,6 +51,12 @@ BackendBundle\Entity\TblDepartamentosFuncionales:
             options:
                 fixed: false
             column: email_direccion
+        despacho:
+            type: integer
+            nullable: true
+            options:
+                unsigned: false
+                default: '0'
     manyToOne:
         idDireccionSreci:
             targetEntity: TblDireccionesSreci
