--- a/Angular_SICDOC/sicdoc/package.json
+++ b/Angular_SICDOC/sicdoc/package.json
@@ -28,6 +28,7 @@
     "angular-material": "^1.1.5",
     "angular2-datatable": "^0.6.0",
     "angular2-image-upload": "^1.0.0-rc.0",
+    "angular2-notifications": "^0.9.7",
     "core-js": "^2.4.1",
     "jspdf": "^1.3.5",
     "jspdf-autotable": "^2.3.2",
