--- a/symfony/src/AppBundle/Resources/config/routing/documentos.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/documentos.yml
@@ -25,3 +25,8 @@ documento_listaDocumentos:
     path: /listar-documentos
     defaults: { _controller: "AppBundle:Documentos:listaDocumentos" }
     methods: POST
+    
+documento_borrarDocumentoServer:
+    path: /borrar-documento-server
+    defaults: { _controller: "AppBundle:Documentos:borrarDocumentoServer" }
+    methods: POST
