--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaEnc.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaEnc.orm.yml
@@ -2,33 +2,33 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
     type: entity
     table: tbl_correspondencia_enc
     indexes:
-        fki_comu_docu:
-            columns:
-                - id_tipo_documento
-        fki_enc_user:
-            columns:
-                - id_usuario
-        fki_enc_estado:
-            columns:
-                - id_estado
-        fki_enc_inst:
-            columns:
-                - id_institucion
-        fki_funcionario_asig:
-            columns:
-                - id_funcionario_asignado
-        fki_tipo_com:
-            columns:
-                - id_tipo_comunicacion
-        fki_corr_depto:
-            columns:
-                - id_depto_funcional
         fki_enc_direccion:
             columns:
                 - id_direccion_sreci
+        fki_corr_depto:
+            columns:
+                - id_depto_funcional
+        fki_funcionario_asig:
+            columns:
+                - id_funcionario_asignado
+        fki_enc_estado:
+            columns:
+                - id_estado
+        fki_enc_user:
+            columns:
+                - id_usuario
+        fki_tipo_com:
+            columns:
+                - id_tipo_comunicacion
         tbl_correspondencia_enc_cod_correspondencia_enc_idx:
             columns:
                 - cod_correspondencia_enc
+        fki_comu_docu:
+            columns:
+                - id_tipo_documento
+        fki_enc_inst:
+            columns:
+                - id_institucion
     uniqueConstraints:
         tbl_correspondencia_enc_cod_correspondencia_enc_key:
             columns:
@@ -115,6 +115,13 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
             options:
                 fixed: false
             column: direcciones_acompanantes
+        comunicacionVinculante:
+            type: string
+            nullable: true
+            length: 300
+            options:
+                fixed: false
+            column: comunicacion_vinculante
     manyToOne:
         idTipoDocumento:
             targetEntity: TblTipoDocumento
