--- a/Angular_SICDOC/sicdoc/package.json
+++ b/Angular_SICDOC/sicdoc/package.json
@@ -36,6 +36,7 @@
     "ng2-completer": "^1.6.3",
     "ng2-file-upload": "^1.2.1",
     "ng2-input-autocomplete": "0.0.11",
+    "ng2-toasty": "^4.0.3",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
