--- a/Angular_SICDOC/sicdoc/package.json
+++ b/Angular_SICDOC/sicdoc/package.json
@@ -29,10 +29,12 @@
     "angular2-datatable": "^0.6.0",
     "angular2-image-upload": "^1.0.0-rc.0",
     "angular2-notifications": "^0.9.7",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "jspdf": "^1.3.5",
     "jspdf-autotable": "^2.3.2",
     "ng2-auto-complete": "^0.12.0",
+    "ng2-charts": "^1.6.0",
     "ng2-completer": "^1.6.3",
     "ng2-file-upload": "^1.2.1",
     "ng2-input-autocomplete": "0.0.11",
