--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblTipoDocumento.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblTipoDocumento.orm.yml
@@ -52,4 +52,10 @@ BackendBundle\Entity\TblTipoDocumento:
             options:
                 default: false
             column: act_salida
+        actCorrespondencia:
+            type: boolean
+            nullable: true
+            options:
+                default: false
+            column: act_correspondencia
     lifecycleCallbacks: {  }
